<resources>
    <string name="app_name">SmartHomeUpgrade</string>
    <string name="navigation_drawer_open">Dies ist Testing</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App For Washing Machine</string>
    <string name="nav_header_subtitle">Always Up-to-Date</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Statistics</string>
    <string name="menu_slideshow">Tutorial</string>
    <string name="menu_test">Login</string>

    <string name="home_second">Home Second</string>
    <string name="setting">Reset</string>
    <string name="setting_name">Settings</string>
    <string name="add">Add</string>
    <string name="link">Link</string>
    <string name="name">Name</string>
    <string name="options">Options</string>
    <string name="team">Team</string>
    <string name="add_waschingmaschine">Add Waschingmaschine</string>
    <string name="option">Options</string>
    <string name="setup">Setup</string>
    <string name="uber">Über</string>
    <string name="version">Version 11.13.59</string>
    <string name="lizenz">Lizenz</string>
    <string name="nutzungsbedingungen">Nutzungsbedingungen</string>
    <string name="datenschutzrichtlinie">Datenschutzrichtlinie</string>
    <string name="help">Help</string>
    <string name="die_digitale_waschmaschine">Die digitale Waschmaschine</string>

</resources>
