<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_main_sett"
        android:title="@string/setting_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_main_opt"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_main_team"
        android:title="@string/uber"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/nav_main_datasave"
                android:title="@string/datenschutzrichtlinie"
                app:showAsAction="never"/>

            <item
                android:id="@+id/nav_main_usetime"
                android:title="@string/nutzungsbedingungen"
                app:showAsAction="never"/>

            <item
                android:id="@+id/nav_main_lizenz"
                android:title="@string/lizenz"
                app:showAsAction="never"/>

            <item
                android:id="@+id/nav_main_version"
                android:title="@string/version"
                app:showAsAction="never"/>
        </menu>

    </item>
</menu>