<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smarthomeupgrade.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_html"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smarthomeupgrade.ui.stats.StatsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_html" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smarthomeupgrade.ui.tutorial.TutorialFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_html" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.smarthomeupgrade.ui.login.LoginFragment"
        android:label="@string/setup"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_set"
        android:name="com.example.smarthomeupgrade.ui.setting.SettingFragment"
        android:label="@string/setting_name"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_team"
        android:name="com.example.smarthomeupgrade.ui.team.TeamFragment"
        android:label="@string/team"
        tools:layout="@layout/fragment_html" />

    <fragment
        android:id="@+id/nav_opt"
        android:name="com.example.smarthomeupgrade.ui.options.OptionFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_option" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.example.smarthomeupgrade.ui.html.DatenschutzFragment"
        android:label="Datenschutz"
        tools:layout="@layout/fragment_html" />

    <fragment
        android:id="@+id/nav_nuz"
        android:name="com.example.smarthomeupgrade.ui.html.NutzungsFragment"
        android:label="Nutungsbedingungen"
        tools:layout="@layout/fragment_html" />

    <fragment
        android:id="@+id/nav_liz"
        android:name="com.example.smarthomeupgrade.ui.html.LizenzFragment"
        android:label="Lizenz"
        tools:layout="@layout/fragment_html" />

</navigation>